--- a/app/src/main/res/layout/bottom_sheet_rider.xml
+++ b/app/src/main/res/layout/bottom_sheet_rider.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:cardElevation="10dp">
+    android:layout_height="wrap_content"
+    android:background="@android:color/white"
+    android:padding="16dp"
+    android:orientation="vertical">
 
     <LinearLayout
         android:orientation="vertical"
@@ -12,25 +14,73 @@
         android:layout_height="wrap_content"
         android:layout_width="match_parent">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="10">
+
+
+            <ImageView
+                android:src="@drawable/ic_pin_drop_black_24dp"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/txtLocation"
+                android:text="Location"
+                android:layout_weight="9"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+
+    <LinearLayout
+        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="10">
+
+
+        <ImageView
+            android:src="@drawable/ic_map_black_24dp"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"/>
         <TextView
-            android:layout_marginTop="10dp"
-            android:text="Lorem ipsum dolor sit amet, consectetur adipisiscing elit, sed do"
-            android:layout_width="wrap_content"
+            android:id="@+id/txtDestination"
+            android:text="Destination"
+            android:layout_weight="9"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"/>
 
+    </LinearLayout>
+    <LinearLayout
+        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="10">
+
+
+        <ImageView
+            android:src="@drawable/ic_credit_card_black_24dp"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"/>
         <TextView
-            android:layout_marginTop="10dp"
-            android:text="Lorem ipsum dolor sit amet, consectetur adipisiscing elit, sed do"
-            android:layout_width="wrap_content"
+            android:id="@+id/txtCalculate"
+            android:text="KSH 50 - 70"
+            android:layout_weight="9"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"/>
 
-        <TextView
-            android:layout_marginTop="10dp"
-            android:text="Lorem ipsum dolor sit amet, consectetur adipisiscing elit, sed do"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+    </LinearLayout>
+
 
 
     </LinearLayout>
 
-</android.support.v7.widget.CardView>
+</LinearLayout>
